@@ -8,7 +8,10 @@
     - issue #21: added methods to _Group for empty_first_label, and refactored
       item generation out of options, values, value_range to _get_empty_first_option,
       which the others call.
-
+    
+    - _Group field options() now supports value_xml, value_loc, label_xml and
+      label_loc values.
+    
     - Bugfix: insert_before() and insert_after() now check if the object is 
       already a child, and if so, removes it first. Reported by Ferruccio 
       Zamuner.
